--- a/src/web/web.csproj
+++ b/src/web/web.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c029a55e-71f8-413f-a0fb-3b8603b008c4</UserSecretsId>
   </PropertyGroup>
 
 </Project>
